# neuro-curation

./: .gitignore  Makefile  README.md  pyproject.toml
sample_data/: README.md  download_sample.sh
src/neuro_curation/: __init__.py  audit.py  cli.py  convert.py  deidentify.py  metrics.py  report.py  verify.py
tests/: conftest.py  test_audit.py  test_convert.py  test_deidentify.py  test_report.py  test_verify.py
